feat: :sparkles: Update Docs
